@@ -366,7 +366,7 @@ setReplaceMethod(".font",
                    styles <- RGtk2:::PangoStyle
                    if(!is.null(style <- tags$style) && style %in% names(styles)) {
                      if(is.null(tagtbl$lookup(style)))
-                       buffer$createTag(style, style=sytles[style])
+                       buffer$createTag(style, style=styles[style])
                      buffer$ApplyTagByName(style, start, end)
                    }
                    
