@@ -4,7 +4,7 @@ Dear Emacs, please make this -*-Text-*- mode!
 
 Changes for version 0.0-76
 --------------------------
- 
+* use info bar for galert when parent is a gwindow.
 
 Changes for version 0.0-75
 --------------------------
